# ToDO

./: CMakeLists.txt  README.md
include/: mainwidget.h  task.h  taskeditwidget.h  taskmanager.h
source/: main.cpp  mainwidget.cpp  task.cpp  taskeditwidget.cpp  taskmanager.cpp
